force-app/main/default/objects/AR_Invoice__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF(Opportunity__r.Account.IsPersonAccount &amp;&amp; !ISBLANK(Opportunity__c),
Opportunity__r.Account.FirstName &amp; &apos; &apos; &amp; Opportunity__r.Account.LastName, IF(!ISBLANK(Account__c),Account__r.Name, &apos;&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>