force-app/main/default/objects/AR_Invoice__c/fields/Amount_Without_VAT__c.field-meta.xml
<CustomField>
    <fullName>Amount_Without_VAT__c</fullName>
    <formula>Round(Amount__c,2) -  VAT_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Without VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>