force-app/main/default/objects/AR_Invoice__c/fields/Charge_Code__c.field-meta.xml
<CustomField>
    <fullName>Charge_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge Code</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>AR_Charge_Code__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>$Source.CreatedDate</field>
            <operation>lessThan</operation>
            <value>5/20/2025, 12:00 AM</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AR_Charge_Code__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>