force-app/main/default/objects/AR_Invoice__c/fields/Charge_Code_Conga_Notes__c.field-meta.xml
<CustomField>
    <fullName>Charge_Code_Conga_Notes__c</fullName>
    <description>This new field is created to be used in Conga Template for Nakheel and DHRE</description>
    <formula>IF( AND(ISPICKVAL(Source_System__c,&apos;Oracle EBS&apos;), Not(ISBLANK(Notes__c)))   ,Notes__c , Charge_Code__r.Description__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Code Conga Notes</label>
    <type>Text</type>
</CustomField>