force-app/main/default/objects/AR_Invoice__c/fields/Charge_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Charge_Code_Name__c</fullName>
    <formula>Charge_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Code Name</label>
    <type>Text</type>
</CustomField>