force-app/main/default/objects/AR_Invoice__c/fields/Create_Transfer_Charge_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Create_Transfer_Charge_Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Transfer Charge Receipt</label>
    <type>Checkbox</type>
</CustomField>