force-app/main/default/objects/AR_Invoice__c/fields/DFR_Distribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>DFR_Distribution_Amount__c</fullName>
    <description>This field is created for Deferred Revenue Distribution amount and FT creation</description>
    <label>DFR Distribution Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>