force-app/main/default/objects/AR_Invoice__c/fields/DFR_Invoice_Amount_Without_VAT__c.field-meta.xml
<CustomField>
    <fullName>DFR_Invoice_Amount_Without_VAT__c</fullName>
    <description>This field is created for Deferred Revenue Migrated Data Reporting.</description>
    <label>DFR Invoice Amount Without VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>