force-app/main/default/objects/AR_Invoice__c/fields/Document_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Document_Bill_To__c</fullName>
    <formula>IF( !ISBLANK( Account__c ) ,  Account_Name__c ,  Issued_From__r.Full_Legal_Name_of_Entity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Bill To</label>
    <type>Text</type>
</CustomField>