force-app/main/default/objects/AR_Invoice__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <formula>IF(Installment_Date__c != null, Installment_Date__c ,  Invoice_Date__c)</formula>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>