force-app/main/default/objects/AR_Invoice__c/fields/Dummy_Period__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Period__c</fullName>
    <formula>TEXT(MONTH(Invoice_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dummy Period</label>
    <type>Text</type>
</CustomField>