force-app/main/default/objects/AR_Invoice__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End Date for Deferred Revenue invoices.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>