force-app/main/default/objects/AR_Invoice__c/fields/Final_Bank_IBAN__c.field-meta.xml
<CustomField>
    <fullName>Final_Bank_IBAN__c</fullName>
    <formula>IF( ISBLANK(Virtual_Bank_IBAN__c) , Bank_Account__r.IBAN__c , Virtual_Bank_IBAN__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Bank IBAN</label>
    <type>Text</type>
</CustomField>