force-app/main/default/objects/AR_Invoice__c/fields/Final_Bank_Number__c.field-meta.xml
<CustomField>
    <fullName>Final_Bank_Number__c</fullName>
    <formula>IF( ISBLANK( Virtual_Bank_Number__c ) , Bank_Account__r.Account_Number__c , Virtual_Bank_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Bank Number</label>
    <type>Text</type>
</CustomField>