force-app/main/default/objects/AR_Invoice__c/fields/Fusion_GL_ACCT__c.field-meta.xml
<CustomField>
    <fullName>Fusion_GL_ACCT__c</fullName>
    <label>Fusion GL ACCT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>