force-app/main/default/objects/AR_Invoice__c/fields/Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>Installment_Date__c</fullName>
    <label>Installment Date</label>
    <type>Date</type>
</CustomField>