force-app/main/default/objects/AR_Invoice__c/fields/Instalment_Description__c.field-meta.xml
<CustomField>
    <fullName>Instalment_Description__c</fullName>
    <formula>IF( TEXT(Charge_Code__r.Charge_Type__c) == &apos;Installments&apos; , &apos;Instalment &apos; + Charge_Code_Name__c ,  Charge_Code__r.Description__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instalment Description</label>
    <type>Text</type>
</CustomField>