force-app/main/default/objects/AR_Invoice__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <displayFormat>INV-{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Invoice Number</label>
    <type>AutoNumber</type>
</CustomField>