force-app/main/default/objects/AR_Invoice__c/fields/Is_Deferred_Revenue_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Is_Deferred_Revenue_Invoice__c</fullName>
    <description>Formula field to determine if an Invoice is deferred or not.</description>
    <formula>AND(NOT(ISBLANK(Start_Date__c)), NOT(ISBLANK(End_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Deferred Revenue Invoice?</label>
    <type>Checkbox</type>
</CustomField>