force-app/main/default/objects/AR_Invoice__c/fields/Is_Finance_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Finance_User__c</fullName>
    <formula>CONTAINS($Profile.Name, &apos;Cashier&apos;) || CONTAINS($Profile.Name, &apos;System Admin&apos;) || CONTAINS($Profile.Name, &apos;Finance&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Finance User</label>
    <type>Checkbox</type>
</CustomField>