force-app/main/default/objects/AR_Invoice__c/fields/is_Manual_Invoice__c.field-meta.xml
<CustomField>
    <fullName>is_Manual_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Manual Invoice</label>
    <type>Checkbox</type>
</CustomField>