force-app/main/default/objects/AR_Invoice__c/fields/Is_Waived__c.field-meta.xml
<CustomField>
    <fullName>Is_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Waived</label>
    <type>Checkbox</type>
</CustomField>