force-app/main/default/objects/AR_Invoice__c/fields/Issued_From__c.field-meta.xml
<CustomField>
    <fullName>Issued_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issued From</label>
    <referenceTo>AR_Legal_Entity__c</referenceTo>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>