force-app/main/default/objects/AR_Invoice__c/fields/issued_To__c.field-meta.xml
<CustomField>
    <fullName>issued_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>issued To</label>
    <referenceTo>AR_Legal_Entity__c</referenceTo>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>