force-app/main/default/objects/AR_Invoice__c/fields/Legal_Entity_Oracle_Code__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Oracle_Code__c</fullName>
    <formula>issued_To__r.GL_Segment_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Entity Oracle Code</label>
    <type>Text</type>
</CustomField>