force-app/main/default/objects/AR_Invoice__c/fields/LPF_Days__c.field-meta.xml
<CustomField>
    <fullName>LPF_Days__c</fullName>
    <label>LPF Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>