force-app/main/default/objects/AR_Invoice__c/fields/LPF_End__c.field-meta.xml
<CustomField>
    <fullName>LPF_End__c</fullName>
    <label>LPF End</label>
    <type>Date</type>
</CustomField>