force-app/main/default/objects/AR_Invoice__c/fields/LPF_Parent_Invoice__c.field-meta.xml
<CustomField>
    <fullName>LPF_Parent_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LPF Parent Invoice</label>
    <referenceTo>AR_Invoice__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>