force-app/main/default/objects/AR_Invoice__c/fields/LPF_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>LPF_Payment_Amount__c</fullName>
    <label>LPF Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>