force-app/main/default/objects/AR_Invoice__c/fields/LPF_Start__c.field-meta.xml
<CustomField>
    <fullName>LPF_Start__c</fullName>
    <label>LPF Start</label>
    <type>Date</type>
</CustomField>