force-app/main/default/objects/AR_Invoice__c/fields/LPF_Value__c.field-meta.xml
<CustomField>
    <fullName>LPF_Value__c</fullName>
    <label>LPF Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>