force-app/main/default/objects/AR_Invoice__c/fields/Omit_fifo__c.field-meta.xml
<CustomField>
    <fullName>Omit_fifo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Omit fifo</label>
    <type>Checkbox</type>
</CustomField>