force-app/main/default/objects/AR_Invoice__c/fields/Oracle_Migrated__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oracle Migrated</label>
    <type>Checkbox</type>
</CustomField>