force-app/main/default/objects/AR_Invoice__c/fields/Oracle_Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Profit_Center__c</fullName>
    <label>Oracle Profit Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>