force-app/main/default/objects/AR_Invoice__c/fields/Paid_from_Trf_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Paid_from_Trf_of_Funds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid from Trf of Funds</label>
    <type>Checkbox</type>
</CustomField>