force-app/main/default/objects/AR_Invoice__c/fields/Posting_Month__c.field-meta.xml
<CustomField>
    <fullName>Posting_Month__c</fullName>
    <formula>TEXT(MONTH(Supply_Date__c)) &amp; &apos;/&apos;&amp; TEXT(YEAR(Supply_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Posting Month</label>
    <type>Text</type>
</CustomField>