force-app/main/default/objects/AR_Invoice__c/fields/PP_Related_GFA__c.field-meta.xml
<CustomField>
    <fullName>PP_Related_GFA__c</fullName>
    <formula>IF((Charge_Code_Name__c = &apos;GFAInv&apos; || Charge_Code_Name__c = &apos;GFA-VAT&apos;) &amp;&amp;  !ISBLANK( Payment_Plan_Detail__c ) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PP Related GFA</label>
    <type>Checkbox</type>
</CustomField>