force-app/main/default/objects/AR_Invoice__c/fields/Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>Profit_Center__c</fullName>
    <formula>Inventory__r.Project_Inv__r.ProfitCenter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Center</label>
    <type>Text</type>
</CustomField>