force-app/main/default/objects/AR_Invoice__c/fields/Project_Thw_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Thw_Code__c</fullName>
    <formula>Inventory__r.Project_Inv__r.Thw_Property_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Thw Code</label>
    <type>Text</type>
</CustomField>