force-app/main/default/objects/AR_Invoice__c/fields/Re_Applied_Amount__c.field-meta.xml
<CustomField>
    <fullName>Re_Applied_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Re-Applied Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>