force-app/main/default/objects/AR_Invoice__c/fields/Receipt_Table_Description__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Table_Description__c</fullName>
    <formula>IF(ISPICKVAL(Source_System__c , &quot;Installments&quot;), Charge_Code__r.Description__c, Charge_Code_Conga_Notes__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receipt Table Description</label>
    <type>Text</type>
</CustomField>