force-app/main/default/objects/AR_Invoice__c/fields/Reversal_Type__c.field-meta.xml
<CustomField>
    <fullName>Reversal_Type__c</fullName>
    <defaultValue>&apos;Not Reversed&apos;</defaultValue>
    <description>To store the reversal type</description>
    <label>Reversal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete Reversal</fullName>
            </value>
            <value>
                <fullName>Partial Reversal</fullName>
            </value>
            <value>
                <fullName>Not Reversed</fullName>
                <default>true</default>
                <label>Not Reversed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>