force-app/main/default/objects/AR_Invoice__c/fields/Run_GL_Update__c.field-meta.xml
<CustomField>
    <fullName>Run_GL_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run GL Update</label>
    <type>Checkbox</type>
</CustomField>