force-app/main/default/objects/AR_Invoice__c/fields/Run_Historical_Accruals__c.field-meta.xml
<CustomField>
    <fullName>Run_Historical_Accruals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Historical Accruals</label>
    <type>Checkbox</type>
</CustomField>