force-app/main/default/objects/AR_Invoice__c/fields/Send_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Send_Invoice__c</fullName>
    <label>Send Invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>