force-app/main/default/objects/AR_Invoice__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>This field stores the Source of the records</description>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Source_System</valueSetName>
    </valueSet>
</CustomField>