force-app/main/default/objects/AR_Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Payment</fullName>
            </value>
            <value>
                <fullName>Fully Paid</fullName>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
            </value>
            <value>
                <fullName>Reversed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>