force-app/main/default/objects/AR_Invoice__c/fields/Sub_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Sub_GL_Account__c</fullName>
    <label>Sub GL Account</label>
    <length>10</length>
    <type>Text</type>
</CustomField>