force-app/main/default/objects/AR_Invoice__c/fields/Tax_Invoice_Generated__c.field-meta.xml
<CustomField>
    <fullName>Tax_Invoice_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Invoice Generated</label>
    <type>Checkbox</type>
</CustomField>