force-app/main/default/objects/AR_Invoice__c/fields/Tax_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Invoice_Number__c</fullName>
    <label>Tax Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>