force-app/main/default/objects/AR_Invoice__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <displayFormat>C-{000000}</displayFormat>
    <label>Transaction Id</label>
    <type>AutoNumber</type>
</CustomField>