force-app/main/default/objects/AR_Invoice__c/fields/TrfOtherAmount__c.field-meta.xml
<CustomField>
    <fullName>TrfOtherAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TrfOtherAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>