force-app/main/default/objects/AR_Invoice__c/fields/Trigger_Amount__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Amount__c</fullName>
    <description>Backend use</description>
    <label>Trigger Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>