force-app/main/default/objects/AR_Invoice__c/fields/Update_Invoice_PPD__c.field-meta.xml
<CustomField>
    <fullName>Update_Invoice_PPD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Invoice PPD</label>
    <type>Checkbox</type>
</CustomField>