force-app/main/default/objects/AR_Invoice__c/fields/Vat__c.field-meta.xml
<CustomField>
    <fullName>Vat__c</fullName>
    <label>Vat %</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 %</fullName>
            </value>
            <value>
                <fullName>5 %</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
            <value>
                <fullName>Out of Scope</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>