force-app/main/default/objects/AR_Invoice__c/fields/VAT_Amount_Type__c.field-meta.xml
<CustomField>
    <fullName>VAT_Amount_Type__c</fullName>
    <label>VAT Amount Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>