force-app/main/default/objects/AR_Invoice__c/fields/VAT_Interface__c.field-meta.xml
<CustomField>
    <fullName>VAT_Interface__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VAT Interface</label>
    <type>Checkbox</type>
</CustomField>