force-app/main/default/objects/AR_Invoice__c/fields/VAT_Object__c.field-meta.xml
<CustomField>
    <fullName>VAT_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VAT</label>
    <referenceTo>VAT__c</referenceTo>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>