force-app/main/default/objects/AR_Invoice__c/fields/VAT_Payable_GL__c.field-meta.xml
<CustomField>
    <fullName>VAT_Payable_GL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VAT Payable GL</label>
    <referenceTo>AR_GL_Account__c</referenceTo>
    <relationshipLabel>Invoices (VAT Payable GL)</relationshipLabel>
    <relationshipName>Invoices2</relationshipName>
    <type>Lookup</type>
</CustomField>