force-app/main/default/objects/AR_Invoice__c/fields/Vat_Rate__c.field-meta.xml
<CustomField>
    <fullName>Vat_Rate__c</fullName>
    <description>Field for tax report</description>
    <formula>VAT_Object__r.Vat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT_RATE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>