force-app/main/default/objects/AR_Invoice__c/fields/Virtual_Bank_IBAN__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Bank_IBAN__c</fullName>
    <label>Virtual Bank IBAN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>