force-app/main/default/objects/AR_Invoice__c/fields/Words_Updated__c.field-meta.xml
<CustomField>
    <fullName>Words_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Words Updated</label>
    <type>Checkbox</type>
</CustomField>