force-app/main/default/objects/AR_Invoice__c/fields/Yardi_GL_ACCT__c.field-meta.xml
<CustomField>
    <fullName>Yardi_GL_ACCT__c</fullName>
    <label>Yardi GL ACCT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>