force-app/main/default/objects/AR_Invoice__c/fields/Yardi_Reversed__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Reversed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yardi Reversed</label>
    <type>Checkbox</type>
</CustomField>